#189 designer usability fixes for editing items.